[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfcparser"
dynamic = ["version"]
dependencies = ["lark"]
readme = "README.md"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.hatch.version]
path = "rfcparser/__init__.py"
