[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfcparser"
dynamic = ["version"]
dependencies = ["lark"]
readme = "README.md"
description = "Rfcparser is a Python tool that makes it easy to parse common RFC syntaxes. Rfcparser takes a raw string as input, parses, validates, and returns Python objects to simplify the processing of RFC syntaxes."
license-files = { paths = ["LICENSE"]}

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]


[project.urls]
Homepage = "https://github.com/karosis88/rfcparser.git"
Source = "https://github.com/karosis88/rfcparser.git"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.hatch.version]
path = "rfcparser/__init__.py"
